
1. Copyright and disclaimer
---------------------------
This application is opensource software released under the CeCILL-B license. Please
see source code at https://github.com/kbertet/java-lattices.

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-02-14 Jean-Francois Viaud <jviaud@univ-lr.fr>
	* src/lattice/package-info.java
		+ Add file
	* src/lattice/ArrowRelation.java
		^ Checkstyle

2014-02-11 Jean-Francois Viaud <jviaud@univ-lr.fr>
	* src/lattice/ArrowRelation.java
		+ Add class
		+ Add constructor
		+ Add writeLaTex method
	* src/lattice/Lattice.java
		+ Add ArrowRelation method
	* test/lattice/ArrowRelationTest.java
		+ Add class
		+ Add unit test on writeLaTeX
	* test/lattice/LatticeTest.java
		+ Add class
		+ add unit test on ArrowRelation
	* test/lattice/package-info.java
		+ Add file
	
2014-02-06 Christophe Demko <chdemko@gmail.com>
	* test/dgraph/DAGraphTest.java:
		+ Add unit test on DAGraph class

2014-01-20 Christophe Demko <chdemko@gmail.com>
	* examples/Examples.java, src/lattice/ConceptLattice.java, src/dgraph/DAGraph.java:
		^ Move idealsLattice method to ConceptLattice and allow a non empty set of nodes in DAGraph constructor
	* src/dgraph/DGraph.java, test/dgraph/DGraphTest.java:
		^ Renaming getSizeEdges and getSizeNodes methods

2014-01-12 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/*.java:
		^ Checkstyle
	* test/dgraph/*.java:
		+ Unit test

2013-11-18 Christophe Demko <chdemko@gmail.com>
 + Adding licenses

2013-11-18 Christophe Demko <chdemko@gmail.com>
 + Adding the ChangeLog file

2013-11-18 Karell Bertet 
 ! Adding the project to github
