@@ -80,7 +80,9 @@
         <!-- Checks for Javadoc comments.                     -->
         <!-- See http://checkstyle.sf.net/config_javadoc.html -->
         <module name="JavadocMethod"/>
-        <module name="JavadocType"/>
+        <module name="JavadocType">
+        	<property name="allowUnknownTags" value="true" />
+        </module>
         <module name="JavadocVariable"/>
         <module name="JavadocStyle"/>
 
